<update> linked script.js & index.css

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <meta charset="UTF-8">
 <title>Page Title</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
+<link rel="stylesheet" href="/index.css">
 <style>
 </style>
-<script src=""></script>
+<script src="/script.js" defer></script>
 <body>
   <div class ="wrapper">
     <h1> Etch-A-Sketch? </h1> 
