<update> redfined makerows() eventlistener uses DOM manip

--- a/index.html
+++ b/index.html
@@ -11,19 +11,17 @@
 
   <h1> Grid aye? </h1> 
 
-<div class="wrapper">
+  <div class="wrapper">
   
-  <aside class ="toggleBar"> This is where the switches will go </aside> 
+    <aside class ="toggleBar"> This is where the switches will go </aside> 
   
-  
-    <div id="container">
-    </div>
-  
-  <aside></aside>
+    <!-- This where the grids are created, using psuedo classes in CSS. -->
+    <div id="container"></div>
+
 
   
-</div>
-
   </div> 
+
+
 </body>
 </html>
