<update> colorSector EventL added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <div>
         <label for="color-selector">Select:</label>
-        <input type="color" name="color-selector" id="color-selector">
+        <input type="color" name="color-selector" id="color-selector" value="#ff0000">
       </div>
 
       <div>
