<update> Color Selector function requires completion

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       
     </aside> 
 
-    <!-- This where the grids are created, using psuedo classes in CSS. -->
+    <!-- Grid-item container-->
     <div id="container"></div>
 
   </div> 
