<update> slimmed JS code

--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
 
       <div>
         <label for="color-selector">Select:</label>
-        <input type="color" name="color-selector" id="color-selector" value="#ff0000">
+        <input type="color" name="color-selector" id="color-selector" value="#000000">
       </div>
-
+      
       <div>
         <label for="grid-size-selector">Grid Size:</label>
         <input type="range" name="grid-size-selector" id="grid-size-selector">
+      </div>
+
+      <div> 
+        <input type="button" name="eraser" id="eraser-btn" value="Eraser">
       </div>
 
       <div>
