<update> DrawingSuggestion now updates from array

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <label for="color-selector">Select:</label>
         <input type="color" name="color-selector" id="color-selector" value="#000000">
       </div>
-      
+
       <div>
         <label for="grid-size-selector">Grid Size:</label>
         <input type="range" name="grid-size-selector" id="grid-size-selector">
@@ -33,7 +33,7 @@
 
       <div>
         <h3>Why not try drawing a:</h3>
-        <p id="random-drawing"><strong>PIG?</strong></p>
+        <p id="random-drawing"><strong></strong></p>
       </div>
 
       
