--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <script src="script.js" defer > </script>
 <body>
 
-  <h1> Grid aye? </h1> 
+  <h1> Grid ay m8? </h1> 
 
 
   <!--Contains the side bar with selectors-->
   <div class="wrapper">
   
-    <aside class ="toggleBar"> This is where the switches will go
+    <aside class ="toggleBar"> <strong>ToggleBar</strong>
 
       <div>
         <label for="color-selector">Select:</label>
@@ -37,8 +37,8 @@
 
 
       <div>
-        <h3>Why not try drawing a:</h3>
-        <p id="random-drawing"><strong></strong></p>
+        <h4>Why not try drawing a:</h4>
+        <p id="random-drawing"></p>
       </div>
 
       
